SPDE tutorial: call datasets included on INLA package

--- a/tutorials/spde/spde-tutorial-introduction.tex
+++ b/tutorials/spde/spde-tutorial-introduction.tex
@@ -332,7 +332,7 @@ of $\alpha$ (or $\nu$) using a Taylor approximation,
 see the author's discussion response in \cite{lindgrenRL:2011}. 
 From this approximation, we have the polynomial of 
 order $p=\lceil \alpha \rceil$ for the precision matrix 
-\begin{equation}
+\begin{equation}\label{eq:Qfrac}
 \bQ = \sum_{i=0}^p b_i \bC(\bC^{-1}\bG)^i.
 \end{equation}
 For $\alpha=1$ and $\alpha=2$ we have the (\ref{eq:Qalpha}). 
