--- a/tutorials/spde/spde-tutorial-toy.Rnw
+++ b/tutorials/spde/spde-tutorial-toy.Rnw
@@ -15,13 +15,17 @@ approach with \pkg{INLA}, are well described on
 <<sett,echo=F,results=hide>>=
 options(width=75)
 require(INLA)
-inla.setOption(inla.call='remote')
+##inla.setOption(inla.call='remote')
 @ 
-Suppose that we have a tree column \code{data.frame} or 
-\code{matrix} with the two first are the coordinates and 
+The dataset used are a tree column \code{data.frame} 
+provided on \pkg{INLA} package called by 
+<<callSPDEtoy>>=
+data(SPDEtoy)
+@ 
+with the two first are the coordinates and 
 the third is the response collected at this locations. 
-<<readdata>>=
-str(toy <- read.csv2("data/toydat.csv"))
+<<strdata>>=
+str(SPDEtoy)
 @ 
 
 We consider the $n$ observations $y_i$ on 
@@ -49,7 +53,7 @@ priors for all the parameters.
 
 <<likfit,echo=F,results=hide>>=
 require(geoR)
-lk <- likfit(as.geodata(toy), ini=c(5,.1), nugget=.1, kappa=1)
+lk <- likfit(as.geodata(SPDEtoy), ini=c(5,.1), nugget=.1, kappa=1)
 lk.est <- c(lk$beta, lk$nugget, lk$cov.pars)
 lk.est[4] <- 1/lk.est[4]
 @ 
@@ -95,11 +99,12 @@ pl01 <- matrix(c(0,1,1,0,0, 0,0,1,1,0), ncol=2)
 @ 
 and create some triangulations with code bellow:
 <<mesh5ab>>=
-m1 <- inla.mesh.create.helper(as.matrix(toy[1:5,1:2]), max.edge=c(1,1))
-m2 <- inla.mesh.create.helper(as.matrix(toy[1:5,1:2]), max.edge=c(.3,1))
+m1 <- inla.mesh.create.helper(as.matrix(SPDEtoy[1:5,1:2]), max.edge=c(1,1))
+m2 <- inla.mesh.create.helper(as.matrix(SPDEtoy[1:5,1:2]), max.edge=c(.3,1))
 m3 <- inla.mesh.create.helper(, pl01, max.edge=c(1,1))
-m4 <- inla.mesh.create.helper(as.matrix(toy[1:5,1:2]), pl01, max.edge=c(.3,1))
-m5 <- inla.mesh.create.helper(as.matrix(toy[1:5,1:2]), pl01, 
+m4 <- inla.mesh.create.helper(as.matrix(SPDEtoy[1:5,1:2]), 
+                              pl01, max.edge=c(.3,1))
+m5 <- inla.mesh.create.helper(as.matrix(SPDEtoy[1:5,1:2]), pl01, 
                               max.edge=c(.3,1), min.angle=30)
 m6 <- inla.mesh.create.helper(, pl01, max.edge=c(.3,.5), offset=c(0.15, 0.3))
 @ 
@@ -108,9 +113,9 @@ Figure~\ref{fig:meshtest}, with the code below
 <<vizmesh,eval=FALSE>>=
 par(mfrow=c(2, 3), mar=c(0,0,0,0))
 for (i in 1:6) { 
-  plot(toy[1:5,1:2], xlim=c(-.4,1.4), asp=1, pch=19, axes=FALSE, col=2)
+  plot(SPDEtoy[1:5,1:2], xlim=c(-.4,1.4), asp=1, pch=19, axes=FALSE, col=2)
   plot(get(paste('m', i, sep='')), add=TRUE) 
-  points(toy[1:5, 1:2], pch=19, col=2); lines(pl01, col=4)
+  points(SPDEtoy[1:5, 1:2], pch=19, col=2); lines(pl01, col=4)
 }
 @ 
 \setkeys{Gin}{width=0.99\textwidth}
@@ -209,13 +214,13 @@ length edges than the sixth.
 
 We did this sixth mesh with the code bellow 
 <<mesh1>>=
-mesh1 <- inla.mesh.create.helper(as.matrix(toy[,1:2]), 
+mesh1 <- inla.mesh.create.helper(as.matrix(SPDEtoy[,1:2]), 
                                  max.edge=c(0.1, 0.2))
 mesh2 <- inla.mesh.create.helper(, pl01, max.e=c(0.04, 0.1))
 mesh3 <- inla.mesh.create.helper(, pl01, max.e=c(0.1, 0.2))
 mesh4 <- inla.mesh.create.helper(, pl01, max.e=c(0.17, 0.35))
 mesh5 <- inla.mesh.create.helper(, pl01, max.e=c(0.25, 0.5))
-mesh6 <- inla.mesh.create.helper(as.matrix(toy[,1:2]), 
+mesh6 <- inla.mesh.create.helper(as.matrix(SPDEtoy[,1:2]), 
                                  max.edge=c(0.04, 0.1))
 c(mesh1$n, mesh2$n, mesh3$n, mesh4$n, mesh5$n, mesh6$n)
 @ 
@@ -229,7 +234,7 @@ par(mfrow=c(2,3), mar=c(0,0,0,0))
 for (i in 1:6) {
   plot(pl01, col=4, xlim=c(-.3,1.3), asp=1, axes=FALSE, type='l')
   plot(get(paste('mesh',i,sep='')), add=T)
-  points(toy[,1:2], pch=19, col=2, cex=toy[,3]/10)
+  points(SPDEtoy[,1:2], pch=19, col=2, cex=SPDEtoy[,3]/10)
 }
 @ 
 \setkeys{Gin}{width=0.99\textwidth}
@@ -273,7 +278,7 @@ parameters using the main function
 <<fit1>>=
 res1 <- inla(y ~ f(i, model=spde1), 
              control.predictor=list(compute=TRUE),
-             data=data.frame(y=toy$y, i=1:nrow(toy)))
+             data=data.frame(y=SPDEtoy$y, i=1:nrow(SPDEtoy)))
 @ 
 On the object returned by \code{inla()} function 
 we have summaries, marginal posterior densities of 
@@ -365,7 +370,7 @@ Here, we define the $\eta^{*}$ as
 \]
 We define the projector matrix with 
 <<proj2>>=
-dim(A2 <- inla.spde.make.A(mesh2, loc=as.matrix(toy[,1:2])))
+dim(A2 <- inla.spde.make.A(mesh2, loc=as.matrix(SPDEtoy[,1:2])))
 @ 
 Because each point is inside one triangle, each row 
 of the projector matrix has three non-zero elements
@@ -398,7 +403,7 @@ We fit the model with
 <<m2>>=
 spde2 <- inla.spde2.matern(mesh2)
 res2 <- inla(resp ~ 0 +  m + f(i, model=spde2), 
-             data=list(resp=toy$y, i=1:mesh2$n, m=rep(1,mesh2$n)), 
+             data=list(resp=SPDEtoy$y, i=1:mesh2$n, m=rep(1,mesh2$n)), 
              control.predictor=list(A=A2, compute=TRUE))
 @ 
 and we have
@@ -435,7 +440,7 @@ mesh constructed on section~\ref{sec:mesh}.
 Firstly, we define the projector matrix based 
 on this mesh 
 <<a3>>=
-A3 <- inla.spde.make.A(mesh3, loc=as.matrix(toy[,1:2]))
+A3 <- inla.spde.make.A(mesh3, loc=as.matrix(SPDEtoy[,1:2]))
 @ 
 and the the indexes set provided 
 <<ind3>>=
@@ -450,7 +455,7 @@ build the model later.
 This function is used firstly to arrange the 
 response, the predictor matrix and the effects 
 <<stackdata>>=
-st3.dat <- inla.stack(data=list(resp=toy$y), A=list(A3), 
+st3.dat <- inla.stack(data=list(resp=SPDEtoy$y), A=list(A3), 
                         effects=list(c(ind3, list(m=1))), tag='est')
 @ 
 and we use the \code{inla.stack.data()} to get the 
@@ -481,33 +486,33 @@ res3 <- inla(resp ~ 0 + m + f(i, model=spde3),
 res2.field <- inla.spde2.result(res2, 'i', spde2, do.transf=TRUE)
 res3.field <- inla.spde2.result(res3, 'i', spde3, do.transf=TRUE)
 ## 4
-A4 <- inla.spde.make.A(mesh4, loc=as.matrix(toy[,1:2]))
+A4 <- inla.spde.make.A(mesh4, loc=as.matrix(SPDEtoy[,1:2]))
 ind4 <- inla.spde.make.index(name='i', n.mesh=mesh4$n)
-st4.dat <- inla.stack(data=list(resp=toy$y), A=list(A4, 1), 
-                        effects=list(ind4, m=rep(1,nrow(toy))))
+st4.dat <- inla.stack(data=list(resp=SPDEtoy$y), A=list(A4, 1), 
+                        effects=list(ind4, m=rep(1,nrow(SPDEtoy))))
 spde4 <- inla.spde2.matern(mesh4)
 res4 <- inla(resp ~ 0 + m + f(i, model=spde4), 
              data=inla.stack.data(st4.dat), 
              control.predictor=list(A=inla.stack.A(st4.dat), compute=TRUE))
 res4.field <- inla.spde2.result(res4, 'i', spde4, do.transf=TRUE)
 ### 5
-A5 <- inla.spde.make.A(mesh5, loc=as.matrix(toy[,1:2]))
+A5 <- inla.spde.make.A(mesh5, loc=as.matrix(SPDEtoy[,1:2]))
 ind5 <- inla.spde.make.index(name='i', n.mesh=mesh5$n)
-st5.dat <- inla.stack(data=list(resp=toy$y), A=list(A5, 1), 
-                        effects=list(ind5, m=rep(1,nrow(toy))))
+st5.dat <- inla.stack(data=list(resp=SPDEtoy$y), A=list(A5, 1), 
+                        effects=list(ind5, m=rep(1,nrow(SPDEtoy))))
 spde5 <- inla.spde2.matern(mesh5)
 res5 <- inla(resp ~ 0 + m + f(i, model=spde5), 
              data=inla.stack.data(st5.dat), 
              control.predictor=list(A=inla.stack.A(st5.dat), compute=TRUE))
 res5.field <- inla.spde2.result(res5, 'i', spde5, do.transf=TRUE)
 ### 6
-##A6 <- inla.spde.make.A(mesh6, loc=as.matrix(toy[,1:2]))
+##A6 <- inla.spde.make.A(mesh6, loc=as.matrix(SPDEtoy[,1:2]))
 ##ind6 <- inla.spde.make.index(name='i', n.mesh=mesh6$n)
-##st6.dat <- inla.stack(data=list(resp=toy$y), A=list(A6, 1), 
-  ##                      effects=list(ind6, m=rep(1,nrow(toy))))
+##st6.dat <- inla.stack(data=list(resp=SPDEtoy$y), A=list(A6, 1), 
+  ##                      effects=list(ind6, m=rep(1,nrow(SPDEtoy))))
 spde6 <- inla.spde2.matern(mesh6)
 res6 <- inla(y ~ f(i, model=spde6), control.predictor=list(compute=T),
-             data=data.frame(y=toy$y, i=1:nrow(toy)))
+             data=data.frame(y=SPDEtoy$y, i=1:nrow(SPDEtoy)))
 ##             data=inla.stack.data(st6.dat), 
 ##             control.predictor=list(A=inla.stack.A(st6.dat), compute=TRUE))
 res6.field <- inla.spde2.result(res6, 'i', spde6, do.transf=TRUE)
