--- a/tutorials/spde/spde-tutorial-rain.Rnw
+++ b/tutorials/spde/spde-tutorial-rain.Rnw
@@ -6,7 +6,7 @@ require(INLA)
 require(geoR)
 require(splancs)
 require(gridExtra)
-inla.setOption(inla.call='remote')
+##inla.setOption(inla.call='remote')
 @ 
 
 A very common data in spatial statistics is the climate data. 
@@ -20,25 +20,25 @@ All these data are freely available from the ANA website.
 
 It have data on more one thousand of locations within 
 Paran\'a, a state at south of Brazil. 
-We have daily rainfall data on first 90 days of the year 
-2011 on 612 locations, including stations within the 
+We have daily rainfall data on each day of the year 
+2011 on 616 locations, including stations within the 
 Paran\'a state and around its border. 
 
-We read the data and the border of Paran\'a state with
+We have these dataset on the \pkg{INLA} package 
+and call it with 
 <<start,results=hide>>=
-prec <- read.table('data/rainfallParana.txt', header=TRUE)
-pr.bord <- read.table('data/borderParana.txt', header=TRUE)
+data(PRprec)
 @ 
 We have the coordinates on first two columns, altitude, 
-and more 90 columns, one for each day of January to march, 
-with daily accumulated precipitation. 
+and more 365 columns, one for each day with the 
+daily accumulated precipitation. 
 We show bellow some data of four stations: 
 the with missing altitude with less latitude, 
 the stations with extremes longitudes and
 the station with greater altitude. 
 <<headdat>>=
-prec[ii <- c(which(is.na(prec$A))[which.min(prec$S[is.na(prec$A)])], 
-             which(prec$E%in%range(prec$E)), which.max(prec$A)), 1:10]
+PRprec[ii <- c(which(is.na(PRprec$A))[which.min(PRprec$La[is.na(PRprec$A)])], 
+               which(PRprec$Lo%in%range(PRprec$Lo)), which.max(PRprec$A)), 1:10]
 @ 
 We visualize this four stations in red points on the graph at 
 right of Figure~\ref{fig:paranastations}. 
@@ -65,7 +65,7 @@ In this section, we analyze the mean of daily
 accumulated precipitation on January of 2012. 
 We compute this covariate with
 <<meanjan>>=
-prec$precMean <- rowMeans(prec[,3+1:31], na.rm=TRUE)
+PRprec$precMean <- rowMeans(PRprec[,3+1:31], na.rm=TRUE)
 @ 
 
 We visualize the locations on 
@@ -73,18 +73,18 @@ Figure~\ref{fig:paranastations},
 with the commands bellow
 <<precviz,eval=F,results=hide>>=
 par(mfrow=c(1,2), mar=c(0,0,2,0))
-plot(pr.bord, type='l', asp=1, axes=FALSE, main='Altitude')
-points(prec[1:2], col=is.na(prec$Alt)+1,
-       cex=ifelse(is.na(prec$Alt), 1, .3+prec$Alt/1500)) 
+plot(PRborder, type='l', asp=1, axes=FALSE, main='Altitude')
+points(PRprec[1:2], col=is.na(PRprec$Alt)+1,
+       cex=ifelse(is.na(PRprec$Alt), 1, .3+PRprec$Alt/1500)) 
 legend('topright', format(0:4*350), bty='n', pch=1, pt.cex=.3+0:4*35/150)
-lines(pr.bord[1034:1078, ], col='cyan')
+lines(PRborder[1034:1078, ], col='cyan')
 
-plot(pr.bord, type='l', asp=1, axes=FALSE, 
+plot(PRborder, type='l', asp=1, axes=FALSE, 
      main=paste('Mean of daily accumulated precipitation (mm)'))
-points(prec[1:2], cex=0.3+prec$precMean/20) 
+points(PRprec[1:2], cex=0.3+PRprec$precMean/20) 
 legend('topright', format(seq(1,21,5)), 
        bty='n', pch=1, pt.cex=0.3+seq(1,21,5)/20) 
-points(prec[ii, 1:2], pch=3, col=2)
+points(PRprec[ii, 1:2], pch=3, col=2)
 @ 
 \setkeys{Gin}{width=0.99\textwidth}
 \begin{figure}\centering
@@ -140,18 +140,29 @@ that share frontier with the sea (plotted as cyan line on
 left graph at Figure~\ref{fig:paranastations}) and computes 
 the distance from each station to the 
 neighbor coordinate of this line. 
+
+Before the distance computation, we do a 
+projection of the \texttt{latlon} coordinates 
+on a projection where the distance units 
+are in Kilometers.
+<<project>>=
+require(rgdal)
+sprj <- '+proj=utm +zone=22 +south +ellps=WGS84 +units=km'
+xy <- project(as.matrix(PRprec[,1:2]), sprj)
+bord <- project(PRborder, sprj)
+@ 
+
 We compute these distances using 
 the \code{nndistF()} function provided 
 by \pkg{splancs} package, \cite{splancs}. 
 <<distseacalc>>=
-prec$"seaDist" <- nndistF(as.matrix(pr.bord[1034:1078,]), 
-                          as.matrix(prec[,1:2]))
+PRprec$"seaDist" <- nndistF(bord[1034:1078,], xy)
 @ 
 We see the dispersion plots 
 at Figure~\ref{fig:disppred}. 
 <<dispp,eval=F,results=hide>>=
 par(mfrow=c(2,2), mar=c(3,3,0.5,0.5), mgp=c(1.7,.7,0), las=1)
-for (i in c(1:3, ncol(prec)))  plot(prec[c(i,ncol(prec)-1)], cex=.5)
+for (i in c(1:3, ncol(PRprec)))  plot(PRprec[c(i,ncol(PRprec)-1)], cex=.5)
 @ 
 \setkeys{Gin}{width=0.9\textwidth}
 \begin{figure}\centering
@@ -192,22 +203,22 @@ Using the \code{nndistG()} function of the
 \pkg{splancs}, \cite{splancs}, we compute the 
 distance from each station to its neighbor station
 <<summarydists>>=
-summary(nndistG(as.matrix(prec[,1:2]))$dists)
+summary(nndistG(as.matrix(PRprec[,1:2]))$dists)
 @ 
 and we have station at same location to another 
 and stations at 35 kilometers from other. 
 So, is more good to use \code{cutoff} greater than 0.
 
 The Paran\'a state border is formed by a sequence of 
-\Sexpr{format(nrow(pr.bord))} 
+\Sexpr{format(nrow(bord))} 
 coordinates, that form the segments. 
 The half of this segments are separated by less than 
-\Sexpr{format(median(sqrt(rowSums((pr.bord[-1,]-pr.bord[-nrow(pr.bord),])^2))))}
+\Sexpr{format(median(sqrt(rowSums((bord[-1,]-bord[-nrow(bord),])^2))))}
  Kilometer and we have segments up to
-\Sexpr{format(max(sqrt(rowSums((pr.bord[-1,]-pr.bord[-nrow(pr.bord),])^2))))}
+\Sexpr{format(max(sqrt(rowSums((bord[-1,]-bord[-nrow(bord),])^2))))}
 Kilometers. 
 <<distbord>>=
-summary(sqrt(rowSums((pr.bord[-1,]-pr.bord[-nrow(pr.bord),])^2)))
+summary(sqrt(rowSums((bord[-1,]-bord[-nrow(bord),])^2)))
 @ 
 In this case, we need \code{cutoff} greater than 0. 
 Because if we use \code{cutoff=0}, we have small 
@@ -216,20 +227,20 @@ On the right mesh on this Figure, we have a good
 mesh created using \code{cutoff=15} and this 
 same value to the maximum length of inner edges. 
 <<premsh12>>=
-(mesh0 <- inla.mesh.create.helper(, as.matrix(pr.bord), cutoff=0,
+(mesh0 <- inla.mesh.create.helper(, bord, cutoff=0,
                                  max.edge=c(15, 30), offset=c(15,30)))$n
-(mesh <- inla.mesh.create.helper(, as.matrix(pr.bord), cutoff=15,
+(mesh <- inla.mesh.create.helper(, bord, cutoff=15,
                                  max.edge=c(15, 30), offset=c(15,30)))$n
 @ 
 These meshes are visualized on Figure~\ref{fig:prmesh12} 
 with commands below
 <<cvprmeshes,eval=FALSE>>=
-xlm <- range(pr.bord[,1])*c(.9, 1.1)
+xlm <- range(bord[,1])*c(.9, 1.1)
 par(mfrow=c(1,2), mar=c(0,0,2,0))  
-plot(pr.bord, type='l', asp=1, axes=FALSE, xlim=xlm)
-plot(mesh0, add=TRUE);   lines(pr.bord, col=2) 
-plot(pr.bord, type='l', asp=1, axes=FALSE, xlim=xlm)
-plot(mesh, add=TRUE);   lines(pr.bord, col=2)  
+plot(bord, type='l', asp=1, axes=FALSE, xlim=xlm)
+plot(mesh0, add=TRUE);   lines(bord, col=2) 
+plot(bord, type='l', asp=1, axes=FALSE, xlim=xlm)
+plot(mesh, add=TRUE);   lines(bord, col=2)  
 @ 
 \begin{figure}\centering
 <<vmeshs,echo=F,fig=T,eps=F,width=10,height=4>>=
@@ -242,12 +253,12 @@ plot(mesh, add=TRUE);   lines(pr.bord, col=2)
 To fit the model, we use the stack functionality 
 to prepare the data. 
 <<stackpr>>=
-A <- inla.spde.make.A(mesh, loc=as.matrix(prec[,1:2]))
+A <- inla.spde.make.A(mesh, loc=xy)
 ind <- inla.spde.make.index(name='i', n.mesh=mesh$n)
-stk.dat <- inla.stack(data=list(y=prec$precMean), A=list(A,1,1), 
+stk.dat <- inla.stack(data=list(y=PRprec$precMean), A=list(A,1,1), 
                       effects=list(c(ind, list(Intercept=1)), 
-                        gEast=inla.group(prec$East), 
-                        gSeaDist=inla.group(prec$seaDist)), tag='dat')
+                        gWest=inla.group(xy[,1]), 
+                        gSeaDist=inla.group(PRprec$seaDist)), tag='dat')
 @ 
 In this stack the intercept is included as 
 one element on the index list set and the 
@@ -258,9 +269,9 @@ A different way is used on Chapter~\ref{ch:semic}.
 
 <<fitgamma1>>=
 spde <- inla.spde2.matern(mesh, alpha=2)
-f.east <- y ~ 0 + Intercept + f(gEast, model='rw1') + f(i, model=spde)
+f.west <- y ~ 0 + Intercept + f(gWest, model='rw1') + f(i, model=spde)
 f.sead <- y ~ 0 + Intercept + f(gSeaDist, model='rw1') + f(i, model=spde)
-r.east <- inla(f.east, family='Gamma', control.compute=list(dic=TRUE),
+r.west <- inla(f.west, family='Gamma', control.compute=list(dic=TRUE),
                data=inla.stack.data(stk.dat), 
                control.predictor=list(A=inla.stack.A(stk.dat), compute=TRUE))
 r.sead <- inla(f.sead, family='Gamma', control.compute=list(dic=TRUE),
@@ -269,7 +280,7 @@ r.sead <- inla(f.sead, family='Gamma', control.compute=list(dic=TRUE),
 @ 
 We have the DIC of each model with 
 <<dics>>=
-c(r.east$dic$dic, r.sead$dic$dic)
+c(r.west$dic$dic, r.sead$dic$dic)
 @ 
 and choose the model with distance to sea as covariate. 
 We got the summary of posterior distribution of the intercept with 
@@ -367,13 +378,18 @@ The Paran\'a state shape is more width than height.
 So, we choose diferent shape of grid to get an 
 adequate cell size. We use 
 <<nxy>>=
-(nxy <- round(c(diff(range(pr.bord[,1])), diff(range(pr.bord[,2])))/4))
+(nxy <- round(c(diff(range(bord[,1])), diff(range(bord[,2])))/4))
 @ 
+Here we divide the range of each coordinate 
+by $4$. Its because we have the coordinates  
+with units in kilometers and we want 
+each cell on the grid with $4\times 4$ km.
+
 Now, we get the projector with
 <<projgrid>>=
 
-projgrid <- inla.mesh.projector(mesh, xlim=range(pr.bord[,1]), 
-                                ylim=range(pr.bord[,2]), dims=nxy)
+projgrid <- inla.mesh.projector(mesh, xlim=range(bord[,1]), 
+                                ylim=range(bord[,2]), dims=nxy)
 @ 
 and get the posterior mean and posterior standard deviation with 
 <<projpred>>=
@@ -387,7 +403,7 @@ To do it, we use the function \code{inout()} on \pkg{splancs}
 package, with
 <<sp>>=
 table(xy.in <- inout(projgrid$lattice$loc, 
-                     cbind(pr.bord[,1], pr.bord[,2])))
+                     cbind(bord[,1], bord[,2])))
 xmean[!xy.in] <- xsd[!xy.in] <- NA
 @ 
 We visualize the this on Figure~\ref{fig:xrain1}. 
@@ -432,12 +448,12 @@ Now we get the covariate values
 at each point on the grid. 
 First we compute the distance to sea
 <<seadcov0>>=
-seaDist0 <- nndistF(as.matrix(pr.bord[1034:1078,]), prdcoo)
+seaDist0 <- nndistF(bord[1034:1078,], prdcoo)
 @ 
 and found the knot group, using the same 
 used on the model
 <<gsead>>=
-ug.seadist <- sort(unique(inla.group(prec$seaDist)))
+ug.seadist <- sort(unique(inla.group(PRprec$seaDist)))
 ig0 <- apply(abs(outer(ug.seadist, seaDist0, '-')),2,which.min)
 g.seadist <- ug.seadist[ig0]
 @ 
@@ -501,4 +517,4 @@ We see at this Figure a clear pattern
 on the average of the daily accumulated 
 precipitation occurred on January of 2012. 
 It's high near to sea and lower 
-at north east part of the Paran\'a state.
+at north west part of the Paran\'a state.
