clean the R chunks of spde-tutorial: without > and +

--- a/tutorials/spde/spde-tutorial-nonstationar.Rnw
+++ b/tutorials/spde/spde-tutorial-nonstationar.Rnw
@@ -1,6 +1,7 @@
 \chapter{Non stationary model}
 
 <<opts,echo=F,results=hide>>=
+options(width=60, prompt = " ", continue = "   ")
 options(width=75)
 require(INLA)
 require(gridExtra)
