--- a/tutorials/spde/spde-tutorial-jcovar.Rnw
+++ b/tutorials/spde/spde-tutorial-jcovar.Rnw
@@ -2,6 +2,7 @@
 
 \setkeys{Gin}{width=0.99\textwidth}
 <<sett,echo=F,results=hide>>=
+options(width=60, prompt = " ", continue = "   ")
 options(width=75)
 require(INLA)
 ###inla.setOption(inla.call='remote')
