--- a/tutorials/spde/spde-tutorial-likelihoodintro.Rnw
+++ b/tutorials/spde/spde-tutorial-likelihoodintro.Rnw
@@ -1,13 +1,14 @@
 To start, we look at the model and fitting process 
 by view of parametrization used in a software 
 commonly used to Analise the point refereed data 
-in \pkg{R}, the \pkg{geoR} package. 
+in \pkg{R}, the \pkg{geoR} package, \cite{geoR}. 
 But, before it, we show how we simulate 
 a dataset. 
 
 \section{Simulation of a data set} 
 
 <<echo=F,results=hide>>=
+options(width=60, prompt = " ", continue = "   ")
 options(width=75)
 @ 
 
@@ -201,8 +202,3 @@ Also, we note that the likelihood has similar value,
 probably because the estimated value of $\nu$ is similar 
 to its true value. 
 
-<<echo=F,results=hide>>=
-write.csv2(cbind(s1=grf1$coords[,1], 
-                 s2=grf1$coords[,2], y=grf1$data), 
-           "data/toydat.csv", row.names=FALSE)
-@ 
