--- a/tutorials/spde/spde-tutorial-rain.Rnw
+++ b/tutorials/spde/spde-tutorial-rain.Rnw
@@ -1,6 +1,7 @@
 \chapter{Non-Gaussian response: Precipitation on Paran\'a}\label{sec:prprec}
 
 <<opts,echo=F,results=hide>>=
+options(width=60, prompt = " ", continue = "   ")
 options(width=75)
 require(INLA)
 require(geoR)
@@ -203,7 +204,7 @@ Using the \code{nndistG()} function of the
 \pkg{splancs}, \cite{splancs}, we compute the 
 distance from each station to its neighbor station
 <<summarydists>>=
-summary(nndistG(xy)$dists)
+summary(nndistG(as.matrix(PRprec[,1:2]))$dists)
 @ 
 and we have station at same location to another 
 and stations at 35 kilometers from other. 
