--- a/tutorials/spde/spde-tutorial-semicontinuous.Rnw
+++ b/tutorials/spde/spde-tutorial-semicontinuous.Rnw
@@ -1,12 +1,13 @@
 \chapter{Semicontinuous model to daily rainfall}\label{ch:semic}
 
 <<sett,echo=FALSE,results=hide>>=
+options(width=60, prompt = " ", continue = "   ")
 options(width=75)
 require(INLA)
 require(geoR)
 require(splancs)
 require(gridExtra)
-inla.setOption(inla.call='remote')
+##inla.setOption(inla.call='remote')
 @ 
 
 The daily rainfall data is one type of data that 
@@ -21,17 +22,16 @@ model to occurence and to positive values.
 
 \section{The data and the model}
 
-The data is 
+The data is called by
 <<readdata>>=
-prec <- read.table('data/rainfallParana.txt', header=TRUE)
-pr.bord <- read.table('data/borderParana.txt', header=TRUE)
-prec[1:3, 1:10]
+data(PRprec)
+PRprec[1:3, 1:10]
 @ 
 and we have, for the first five days on January, 
 the summary and the number of station with rain 
 <<summ>>=
-sapply(prec[,4:9], summary)
-apply(prec[,4:9]>0, 2, summary)
+sapply(PRprec[,4:9], summary)
+apply(PRprec[,4:9]>0, 2, summary)
 @ 
 and we see that we have no rain in 538 stations 
 on the first day, 399 on second and 294 on third.
@@ -59,8 +59,8 @@ y_i =
 Using the data on the third day we have
 <<vardef>>=
 jday <- 6
-z <- (prec[,jday]>0)+0
-y <- ifelse(prec[,jday]>0, prec[,jday], NA)
+z <- (PRprec[,jday]>0)+0
+y <- ifelse(PRprec[,jday]>0, PRprec[,jday], NA)
 @ 
 
 The map of this data are showed on the left graph 
@@ -72,7 +72,7 @@ Both produced by the code below
 par(mfrow=c(1, 2), mar=c(3,3,.5,0), mgp=c(1.5,0.5,0))
 hist(y, xlab='mm', col=gray(.9), main='')
 par(mar=c(0,0,0,0))
-plot(prec[,1:2], cex=0.3 + prec[,jday]/20, asp=1, col=z+1, axes=FALSE)
+plot(PRprec[,1:2], cex=0.3 + PRprec[,jday]/20, asp=1, col=z+1, axes=FALSE)
 q.y <- c(0, quantile(y, 0:7/7, na.rm=T))
 legend('topright', format(q.y, dig=2), pch=1, bty='n',
        pt.cex=0.3+q.y/20, col=c(1,rep(2,length(q.y)-1)))
@@ -99,7 +99,7 @@ We put the first response on first column
 at first $n$ rows and the second response 
 on last $n$ rows of second column.
 <<Y>>=
-n <- nrow(prec)
+n <- nrow(PRprec)
 Y <- matrix(NA, 2*n, 2)
 Y[1:n, 1] <- z
 Y[n + 1:n, 2] <- y
@@ -133,14 +133,14 @@ first component of the model.
 To define a SPDE model we need a mesh. 
 We prepare the mesh using the border coordinates with
 <<>>=
-mesh <- inla.mesh.create.helper(, as.matrix(pr.bord), cutoff=15,
-                                 max.edge=c(15, 30), offset=c(15,30))
+(mesh <- inla.mesh.create.helper(, PRborder, cutoff=.15,
+                                 max.edge=c(.15, .3), offset=c(.2,.3)))$n
 @ 
 Also, we need to prepare the data in 
 addequate form using the stack functionality. 
 First we get the predictor matrix and the indexes
 <<A>>=
-A <- inla.spde.make.A(mesh, loc=as.matrix(prec[,1:2]))
+A <- inla.spde.make.A(mesh, loc=as.matrix(PRprec[,1:2]))
 ind.z <- inla.spde.make.index(name='iz', n.mesh=mesh$n)
 ind.y <- inla.spde.make.index(name='iy', n.mesh=mesh$n)
 @ 
@@ -340,9 +340,9 @@ plot.default(res.f$marginals.range.nominal[[1]], type='l',
 Another interesting result is the map of the random field. 
 To get it we use get the projector with
 <<projgrid>>=
-(nxy <- round(c(diff(range(pr.bord[,1])), diff(range(pr.bord[,2])))/4))
-projgrid <- inla.mesh.projector(mesh, xlim=range(pr.bord[,1]), 
-                                ylim=range(pr.bord[,2]), dims=nxy)
+(nxy <- round(c(diff(range(PRborder[,1])), diff(range(PRborder[,2])))/.02))
+projgrid <- inla.mesh.projector(mesh, xlim=range(PRborder[,1]), 
+                                ylim=range(PRborder[,2]), dims=nxy)
 @ 
 and get the posterior mean and posterior standard deviation with 
 <<projpred>>=
@@ -355,8 +355,7 @@ points of the grid out of the border of the Paran\'a state.
 To do it, we use the function \code{inout()} on \pkg{splancs} 
 package, with
 <<sp>>=
-table(xy.in <- inout(projgrid$lattice$loc, 
-                     cbind(pr.bord[,1], pr.bord[,2])))
+table(xy.in <- inout(projgrid$lattice$loc, PRborder))
 xmean[!xy.in] <- xsd[!xy.in] <- NA
 @ 
 We visualize the this on Figure~\ref{fig:xrain3}. 
