--- a/tutorials/spde/spde-tutorial-toy.Rnw
+++ b/tutorials/spde/spde-tutorial-toy.Rnw
@@ -13,6 +13,7 @@ approach with \pkg{INLA}, are well described on
 \cite{lindgren:2012} and \cite{cameletti:2012}. 
 
 <<sett,echo=F,results=hide>>=
+options(width=60, prompt = " ", continue = "   ")
 options(width=75)
 require(INLA)
 ##inla.setOption(inla.call='remote')
