--- a/sandbox/tutorials/inla/main.Rnw
+++ b/sandbox/tutorials/inla/main.Rnw
@@ -120,10 +120,10 @@ could be Gaussian, Poisson or some other model.
 
 At the second stage, we have a model for the linear predictors
 $\mm{\eta}$, as a linear combinations of various Gaussian effects,
-\begin{displaymath}
+\begin{equation}
     \eta_{i} = \sum_{j} \beta_{j} z_{ji} + \sum_{k}
-    w_{ki}f_{k}(c_{ki}; \mm{\theta}_{2}).
-\end{displaymath}
+    w_{ki}f_{k}(c_{ki}; \mm{\theta}_{2}).\label{eq:model_linPred}
+\end{equation}
 Here, $\mm{z}$'s are ``fixed effects'' with Gaussian coefficients
 $\mm{\beta}$, $\mm{w}$ are fixed weights and $\mm{f}$ are some
 Gaussian ``random effects''\footnote{We will use the terms ``fixed
@@ -668,16 +668,67 @@ different (and higher) resolution of the posterior marginal.
 
 \chapter{Random effects models}
 
+This chapter discusses the definition of random effects models in INLA.
+Going back to Equation~\ref{eq:model_linPred}, we will describe how
+to define general Gaussian random effects models of the form
+\begin{equation*}
+  \mm{w} f(\mm{c}; \mm{\theta}),
+\end{equation*}
+where $\mm{w}$ denotes a vector of known weights for the effect and $\mm{\theta}$
+represents the hyperparameters of the Gaussian model.
+
 \section{Model definition using the {\tt f()}-function}
-A random effects model is specified using the {\tt f()}-function:
+A random effects model can be defined using the {\tt f()}-function.
+% :
+% \begin{verbatim}
+% 	f(<covariate>, [<weights>], model=<identifier>, hyper, ...)
+% \end{verbatim}
+This function allows to specify the latent model to be used, the prior distributions
+ for its hyperparameters, linear constraints,
+and much more. In this section we will describe the most important
+components of the {\tt f()}-function. More advanced topics like replicating
+a latent model, or grouping several latent models will be described later in detail.
+
+\subsection{First two arguments: Covariate and weights vector}
+The {\tt f()}-function takes as first argument the covariate that should
+be modeled. To define an independent and identically distributed random
+effect for each observation. This is simply an index $c=1,2,\ldots,n$,
+with $n$ denoting the total number of observations, leading to:
 \begin{verbatim}
-	f(<covariate>, [<weights>], model=<identifier>, hyper, ...)
+	f(c, model="iid")
 \end{verbatim}
-The first argument is always the name of the covariate, and the
-second argument might be a vector of known weights (one for each
-covariate value). The entry {\tt model} specifies which latent model
-should be used (for available model see Table~\ref{tab:latentModels}).
-The entry {\tt hyper} is used to specify details of the hyperparameters.
+A smooth effect of a covariate $\mm{c}=(c_1, \ldots, c_n)^\top$, assuming
+covariate values $c_i$ for observation $i$, can be obtained by
+\begin{verbatim}
+	f(c, model="rw2")
+\end{verbatim}
+where we specify a random walk of order 2 for covariate $\mm{c}$.
+The second argument of the {\tt f()}-function is an optional vector of
+known weights $\mm{w}$ (one for each covariate value), leading to
+\begin{verbatim}
+	f(c, w, model="rw2")
+\end{verbatim}
+
+To  reduce the number of unique values of a covariate the
+helper function {\tt inla.group()} can be used. This might help to reduce
+numerical instabilities. For example,
+\begin{verbatim}
+inla.group(c, n=20)
+\end{verbatim}
+groups the covariate values into 20 classes. For more information
+type {\tt ?inla.group} within {\tt R}. The resulting {\tt f()}-function
+changes to
+\begin{verbatim}
+	f(inla.group(c, n=20), w, model="rw2")
+\end{verbatim}
+To define all values assumed by a covariate and
+for which we want estimate an effect,  the optional field
+{\tt values} can be used. Here, a numerical vector, a vector of
+factors or ‘NULL’ can be set:
+\begin{verbatim}
+	f(c, w, model="rw2", values=<values assumed by the covariate>)
+\end{verbatim}
+
 
 
 \section{General options}
@@ -718,7 +769,7 @@ Berkson measurement error model  &    {\tt meb }\\
 \caption{List of latent Gaussian field implemented in the R inla package.}\label{tab:latentModels}
 \end{center}
 \end{table}
-Specific documentation for a model can be found on \url{http://www.r-inla.org/models/latent-models}. Within {\tt R} model documentation can be requested using the function {\tt inla.doc(<identifier>)}, e.g.~{\tt inla.doc("rw1")},
+Specific documentation for each model can be found on \url{http://www.r-inla.org/models/latent-models}. Within {\tt R} model documentation can be requested using the function {\tt inla.doc(<identifier>)}, e.g.~{\tt inla.doc("rw1")},
 % , for example
 % <<echo=TRUE, eval=FALSE>>=
 % inla.doc("rw1")
