Fixed a missprint in the doc for log-gamma. Thanks to CtB.

--- a/r-inla.org/doc/prior/prior-loggamma.tex
+++ b/r-inla.org/doc/prior/prior-loggamma.tex
@@ -33,8 +33,8 @@ The LogGamma prior for the hyperparameters is specified inside the
 \end{center}
 or better, the new style
 \begin{center}
-    {\tt f(<whatever>, hyper = list(<theta>) =
-        list(prior="loggamma", param=c(<a>,<b>)))}
+    {\tt f(<whatever>, hyper = list(<theta> =
+        list(prior="loggamma", param=c(<a>,<b>))))}
 \end{center}
 In the case where there is one hyperparameter for that particular
 f-model. In the case where we want to specify the prior for the
