--- a/tutorials/spde/spde-tutorial-rain.Rnw
+++ b/tutorials/spde/spde-tutorial-rain.Rnw
@@ -7,7 +7,7 @@ require(INLA)
 require(geoR)
 require(splancs)
 require(gridExtra)
-##inla.setOption(inla.call='remote')
+inla.setOption(inla.call='remote')
 @ 
 
 A very common data in spatial statistics is the climate data. 
@@ -292,9 +292,14 @@ To dispersion parameter of the gamma likelihood we have
 <<disp>>=
 r.sead$summary.hy[1,]
 @ 
+To dispersion parameter of the coefficients of the 
+sea distance covariate we have 
+<<disp>>=
+r.sead$summary.hy[2,]
+@ 
 And, to $log(\kappa)$ we have 
 <<logkappa>>=
-r.sead$summary.hy[3,]
+r.sead$summary.hy[4,]
 @ 
 
 The variance and range of the spatial process 
@@ -314,9 +319,12 @@ inla.emarginal(function(x) x, r.f$marginals.range.nominal[[1]])
 
 At the Figure~\ref{fig:dseaeff} we look the posterior 
 distribution to $\beta_0$, $\phi$, 
-$\kappa$, $\sigma_x^2$, practical range and to the 
+$1/\kappa$, $\sigma_x^2$, practical range and to the 
 mean and 95\% credibility interval of the 
 distance to sea effect at Figure~\ref{fig:dseaeff}. 
+We choose $1/\kappa$ instead $kappa$ because 
+$1/\kappa$ is the range parameter and in 
+this case is expressed in kilometer units.
 <<seacoefs,eval=F>>= 
 par(mfrow=c(2,3), mar=c(3,3.5,0,0), mgp=c(1.5, .5, 0), las=0) 
 plot(r.sead$marginals.fix[[1]], type='l', xlab='Intercept', ylab='Density') 
@@ -324,7 +332,7 @@ plot(r.sead$summary.random[[1]][,1:2], type='l',
      xlab='Distance to sea (Km)', ylab='Coeficient'); abline(h=0, lty=3) 
 for (i in c(4,6)) lines(r.sead$summary.random[[1]][,c(1,i)], lty=2) 
 plot(r.sead$marginals.hy[[1]], type='l', ylab='Density', xlab=expression(phi)) 
-plot.default(inla.tmarginal(function(x) exp(x), r.sead$marginals.hy[[3]]), 
+plot.default(inla.tmarginal(function(x) 1/exp(x), r.sead$marginals.hy[[4]]), 
              type='l', xlab=expression(kappa), ylab='Density') 
 plot.default(r.f$marginals.variance.nominal[[1]], type='l', 
              xlab=expression(sigma[x]^2), ylab='Density') 
