--- a/r-inla.org/doc/hyper/likelihood/gaussian.tex
+++ b/r-inla.org/doc/hyper/likelihood/gaussian.tex
@@ -15,6 +15,6 @@
 	 \end{description}
 	\item[survival] FALSE
 	\item[discrete] FALSE
-	\item[link] default identity logit
+	\item[link] default identity logit log
 	\item[pdf] gaussian
 \end{description}
